src/styles/pages/_game.scss
@use '../../../src/styles/themes/da_projects';
@use '../abstract/mixin' as mx;


.alignment {
    display: flex;
    justify-content: center;
    overflow-x: hidden;
}


.game-board {
    margin-top: 41px;
    @include mx.size-scaling(1217px);
    @include mx.screenHeight(xxl) {
        margin-top: 20px;
    }
}


.display-field {
    background-color: var(--surface-header);
    @include mx.size-scaling($ht: var(--header_heigth), $pd:var(--pading-header));
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: var(--border-radius-header);
}


.status-player {
    @include mx.flex-costom($fd: row, $ai: center, $gap: 20px);
    @include mx.size-scaling($ht: var(--height-status-player), $pd: var(--padding-status-player));
    background-color: var(--surface-game-info);
    border-radius: var(--border-radius-game-info);
}


.display-player {
    @include mx.flex-costom($fd: row, $ai: var(--alignment-current-player), $gap: 8px);
    height: 28;

    &__text {
        @include mx.font-design(26px, 400);
    }

    &__img {
        @include mx.size-scaling(29px, 24px);
    }

    &__img-background{
        @include mx.flex-center();
        @include mx.size-scaling(var(--img-div-width), var(--img-div-height), var(--img-div-padding));
        border-radius: var(--img-div-border-radius);
        
        &--blue{
            background-color: #097FC5;
        }
        
        &--orange{
            background-color: #EA6900;
        }
        &--transparent{
            background-color: transparent;
        } 
    }
}


.player {
    @include mx.flex-costom($fd: row, $ai: center, $gap: 4px);
    color: var(--);

    &__img {
        @include mx.size-scaling(24px, 20px);
    }

    &__one {
        @include mx.font-design(24px, 700);
        color: var(--text-player-bl);
        display: none;
    }

    &__two {
        @include mx.font-design(24px, 700);
        color: var(--text-player-or);
        display: none;
    }
}


.font-aktiv{
    display: block;
}


.game-info {
    display: flex;
    gap: 195px;
}


.playing-field {
    margin-top: 60px;
    display: grid;
    justify-content: center;
    gap: var(--card-gap);

    &--grid-16 {
        grid-template-columns: auto auto auto auto;
        gap: 16px;
    }

    &--grid-24 {
        grid-template-columns: auto auto auto auto auto auto;
        gap: 8px;
    }

    &--grid-36 {
        margin-top: 40px;
        grid-template-columns: auto auto auto auto auto auto;
        gap: 8px;
        @include mx.screenHeight(xl) {
            grid-template-columns: auto auto auto auto auto auto auto auto auto;
        }
    }
}


.card {
    @include mx.size-scaling(var(--card-width), var(--card-height));
    &__inner{
        position: relative;
        width: 100%;
        height: 100%;
        transform-style: preserve-3d;
        transition: all 300ms ease-in-out;
        
    }
    &__face{
        background: var(--surface-cover);
        position: absolute;
        width: 100%;
        height: 100%;
        backface-visibility: hidden;
        border-radius: var(--border-radius-card);
        &--back{
            background: var(--surface-front);
            transform: rotateY(180deg);
        }
    }
    &__img{
        display: var(--card-deck);
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
    }
    &:hover {
        animation: shake 0.2s linear infinite;
    }
    .is-flipped {
        transform: rotateY(180deg);
    }
}


.modal {
    @include mx.flex-center($gap: 54px);
    @include mx.size-scaling(500px, 253px, 40px);
    @include mx.font-design($fz:var(--modal-font-size), $fw:var(--modal-font-weight));
    background-color: var(--surface-modal);
    color: var(--text-modal-primary);
    text-align: center;
    border-radius: var(--border-modal);
}


.modal-btn-field {
    @include mx.flex-center($fd:row, $gap: 24px);
}


.overlay {
    @include mx.position-offset($po: absolute, $top: 0px, $lt: 100%);
    @include mx.size-scaling(100%, 100vh);
    @include mx.flex-center();
    background-color: rgba(0, 0, 0, 0.0);
    transform: translateX(0);
    transition: transform 0.3s ease-out;
}


.fade-in {
    transform: translateX(-100%);
}

/* 
.is-open {
    animation: slideIn 0.3s ease forwards;
}


.is-closing {
    animation: slideOut 0.3s ease forwards;
} */


/* // Keyframes global!
@keyframes slideIn {
    from {
        transform: translateX(0);
    }

    to {
        transform: translateX(-100%);
    }
}


@keyframes slideOut {
    from {
        transform: translateX(-100%);
    }

    to {
        transform: translateX(0);
    }
} */


@keyframes shake {
    0% {
        transform: rotate(-2deg);
    }

    25% {
        transform: rotate(0deg);
    }

    75% {
        transform: rotate(2deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

